# jb7-hardfi-encode

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/hardfi_encode/: __main__.py  app.py  converter.py  models.py  scanner.py
tests/: conftest.py  test_app.py  test_converter.py  test_models.py  test_scanner.py
